fix: Change the height property of distorted class
    I changed the value from 600px to 400px

--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -5,6 +5,6 @@
 }
 
 .avatar.distorted {
-    height: 600px;
+    height: 400px;
     width: 200px;
 }
